config/kubernetes/nexus-microservices/01_user-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: nexus
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
