config/kubernetes/nexus-microservices/03_transaction-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: nexus
  labels:
    app: transaction-service
spec:
  selector:
    app: transaction-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
  type: ClusterIP
