config/kubernetes/nexus-microservices/05_analytics-service-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: nexus
  labels:
    app: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
  type: ClusterIP
